--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.gradleup.shadow' version '8.3.5'
     // Uncomment the line below if you want to use runServer for development testing
     // id("xyz.jpenilla.run-paper") version "2.3.1"
 }
@@ -20,8 +21,12 @@ repositories {
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT")
+    compileOnly("org.spigotmc:spigot-api:1.21-R0.1-SNAPSHOT")
     compileOnly("com.sk89q.worldedit:worldedit-bukkit:7.3.0")
+
+    // Adventure API for both Paper and Spigot
+    implementation("net.kyori:adventure-platform-bukkit:4.3.2")
+    implementation("net.kyori:adventure-text-minimessage:4.14.0")
 }
 
 // Uncomment the block below if you want to use runServer for development testing
@@ -31,8 +36,10 @@ dependencies {
 //     }
 // }
 
-sourceCompatibility = '21'
-targetCompatibility = '21'
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
@@ -43,3 +50,12 @@ processResources {
         expand version: version
     }
 }
+
+shadowJar {
+    archiveClassifier.set('')
+
+    // Relocate Adventure API to avoid conflicts
+    relocate 'net.kyori', 'solutions.m2b.chunkloader.libs.kyori'
+}
+
+build.dependsOn shadowJar
